recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:4: error: illegal start of simple expression
  else :
       ^